Replaced emptySet() by Set.of in TopicParser.java